TL_Interpreter/src/tl/TLParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 TL.g 2013-12-15 15:17:53
 
  package tl; 
  import java.util.Map; 
  import java.util.HashMap; 


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class TLParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "BLOCK", "RETURN", "STATEMENTS", "ASSIGNMENT", "TO_PRINT", "IF", "EXP", "ID_LIST", "INDEXES", "UNARY_MIN", "NOT", "BIN_NOT", "LOOKUP", "LIST", "EXP_LIST", "FUNC_CALL", "Return", "If", "Else_If", "Else", "Def_Func", "Identifier", "Out", "Null", "Number", "Bool", "In", "String", "Or", "And", "Equals", "NEquals", "GTEquals", "LTEquals", "GT", "LT", "Not", "Pow", "Add", "Subt", "Mult", "Int_Div", "Div", "Mod", "Bit_Or", "Bit_And", "Bit_Xor", "Bit_Not", "Gets", "Comma", "Open_Paren", "Close_Paren", "Open_Bracket", "Close_Bracket", "Open_Brace", "Close_Brace", "Int", "Digit", "Comment", "Space", "';'"
    };
    public static final int LT=39;
    public static final int T__64=64;
    public static final int Close_Brace=59;
    public static final int Open_Bracket=56;
    public static final int TO_PRINT=8;
    public static final int BIN_NOT=15;
    public static final int EXP_LIST=18;
    public static final int NOT=14;
    public static final int ID_LIST=11;
    public static final int Add=42;
    public static final int EOF=-1;
    public static final int Subt=43;
    public static final int Int=60;
    public static final int Identifier=25;
    public static final int IF=9;
    public static final int FUNC_CALL=19;
    public static final int Space=63;
    public static final int Out=26;
    public static final int Bit_And=49;
    public static final int Gets=52;
    public static final int Number=28;
    public static final int Comment=62;
    public static final int EXP=10;
    public static final int GTEquals=36;
    public static final int RETURN=5;
    public static final int Bit_Or=48;
    public static final int String=31;
    public static final int Or=32;
    public static final int Open_Brace=58;
    public static final int Return=20;
    public static final int Def_Func=24;
    public static final int If=21;
    public static final int Null=27;
    public static final int And=33;
    public static final int Div=46;
    public static final int Mod=47;
    public static final int Bool=29;
    public static final int In=30;
    public static final int NEquals=35;
    public static final int INDEXES=12;
    public static final int Digit=61;
    public static final int Open_Paren=54;
    public static final int LIST=17;
    public static final int Mult=44;
    public static final int LOOKUP=16;
    public static final int Else_If=22;
    public static final int Close_Bracket=57;
    public static final int Bit_Xor=50;
    public static final int BLOCK=4;
    public static final int Not=40;
    public static final int Int_Div=45;
    public static final int STATEMENTS=6;
    public static final int GT=38;
    public static final int UNARY_MIN=13;
    public static final int ASSIGNMENT=7;
    public static final int Bit_Not=51;
    public static final int Else=23;
    public static final int Comma=53;
    public static final int Equals=34;
    public static final int Pow=41;
    public static final int Close_Paren=55;
    public static final int LTEquals=37;

    // delegates
    // delegators


        public TLParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public TLParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return TLParser.tokenNames; }
    public String getGrammarFileName() { return "TL.g"; }

     
      public Map<String, Function> functions = new HashMap<String, Function>(); 
       
      private void defineFunction(String id, Object idList, Object block) { 
     
        // `idList` is possibly null!  Create an empty tree in that case.  
        CommonTree idListTree = idList == null ? new CommonTree() : (CommonTree)idList; 
     
        // `block` is never null 
        CommonTree blockTree = (CommonTree)block; 
     
        // The function name with the number of parameters after it, is the unique key 
        String key = id + idListTree.getChildCount(); 
        functions.put(key, new Function(id, idListTree, blockTree)); 
      } 


    public static class parse_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "parse"
    // TL.g:49:1: parse : delimitedBlock EOF ;
    public final TLParser.parse_return parse() throws RecognitionException {
        TLParser.parse_return retval = new TLParser.parse_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token EOF2=null;
        TLParser.delimitedBlock_return delimitedBlock1 = null;


        Object EOF2_tree=null;

        try {
            // TL.g:50:3: ( delimitedBlock EOF )
            // TL.g:50:6: delimitedBlock EOF
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_delimitedBlock_in_parse135);
            delimitedBlock1=delimitedBlock();

            state._fsp--;

            adaptor.addChild(root_0, delimitedBlock1.getTree());
            EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_parse137); 
            EOF2_tree = (Object)adaptor.create(EOF2);
            adaptor.addChild(root_0, EOF2_tree);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "parse"

    public static class block_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "block"
    // TL.g:53:1: block : '{' ( statement | functionDecl )* ( Return expression ';' )? '}' -> ^( BLOCK ^( STATEMENTS ( statement )* ) ^( RETURN ( expression )? ) ) ;
    public final TLParser.block_return block() throws RecognitionException {
        TLParser.block_return retval = new TLParser.block_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal3=null;
        Token Return6=null;
        Token char_literal8=null;
        Token char_literal9=null;
        TLParser.statement_return statement4 = null;

        TLParser.functionDecl_return functionDecl5 = null;

        TLParser.expression_return expression7 = null;


        Object char_literal3_tree=null;
        Object Return6_tree=null;
        Object char_literal8_tree=null;
        Object char_literal9_tree=null;
        RewriteRuleTokenStream stream_Close_Brace=new RewriteRuleTokenStream(adaptor,"token Close_Brace");
        RewriteRuleTokenStream stream_Open_Brace=new RewriteRuleTokenStream(adaptor,"token Open_Brace");
        RewriteRuleTokenStream stream_Return=new RewriteRuleTokenStream(adaptor,"token Return");
        RewriteRuleTokenStream stream_64=new RewriteRuleTokenStream(adaptor,"token 64");
        RewriteRuleSubtreeStream stream_statement=new RewriteRuleSubtreeStream(adaptor,"rule statement");
        RewriteRuleSubtreeStream stream_expression=new RewriteRuleSubtreeStream(adaptor,"rule expression");
        RewriteRuleSubtreeStream stream_functionDecl=new RewriteRuleSubtreeStream(adaptor,"rule functionDecl");
        try {
            // TL.g:54:3: ( '{' ( statement | functionDecl )* ( Return expression ';' )? '}' -> ^( BLOCK ^( STATEMENTS ( statement )* ) ^( RETURN ( expression )? ) ) )
            // TL.g:54:6: '{' ( statement | functionDecl )* ( Return expression ';' )? '}'
            {
            char_literal3=(Token)match(input,Open_Brace,FOLLOW_Open_Brace_in_block151);  
            stream_Open_Brace.add(char_literal3);

            // TL.g:54:10: ( statement | functionDecl )*
            loop1:
            do {
                int alt1=3;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==If||(LA1_0>=Identifier && LA1_0<=Out)) ) {
                    alt1=1;
                }
                else if ( (LA1_0==Def_Func) ) {
                    alt1=2;
                }


                switch (alt1) {
            	case 1 :
            	    // TL.g:54:11: statement
            	    {
            	    pushFollow(FOLLOW_statement_in_block154);
            	    statement4=statement();

            	    state._fsp--;

            	    stream_statement.add(statement4.getTree());

            	    }
            	    break;
            	case 2 :
            	    // TL.g:54:23: functionDecl
            	    {
            	    pushFollow(FOLLOW_functionDecl_in_block158);
            	    functionDecl5=functionDecl();

            	    state._fsp--;

            	    stream_functionDecl.add(functionDecl5.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);

            // TL.g:54:38: ( Return expression ';' )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==Return) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // TL.g:54:39: Return expression ';'
                    {
                    Return6=(Token)match(input,Return,FOLLOW_Return_in_block163);  
                    stream_Return.add(Return6);

                    pushFollow(FOLLOW_expression_in_block165);
                    expression7=expression();

                    state._fsp--;

                    stream_expression.add(expression7.getTree());
                    char_literal8=(Token)match(input,64,FOLLOW_64_in_block167);  
                    stream_64.add(char_literal8);


                    }
                    break;

            }

            char_literal9=(Token)match(input,Close_Brace,FOLLOW_Close_Brace_in_block171);  
            stream_Close_Brace.add(char_literal9);



            // AST REWRITE
            // elements: expression, statement
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 55:5: -> ^( BLOCK ^( STATEMENTS ( statement )* ) ^( RETURN ( expression )? ) )
            {
                // TL.g:55:8: ^( BLOCK ^( STATEMENTS ( statement )* ) ^( RETURN ( expression )? ) )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(BLOCK, "BLOCK"), root_1);

                // TL.g:55:16: ^( STATEMENTS ( statement )* )
                {
                Object root_2 = (Object)adaptor.nil();
                root_2 = (Object)adaptor.becomeRoot((Object)adaptor.create(STATEMENTS, "STATEMENTS"), root_2);

                // TL.g:55:29: ( statement )*
                while ( stream_statement.hasNext() ) {
                    adaptor.addChild(root_2, stream_statement.nextTree());

                }
                stream_statement.reset();

                adaptor.addChild(root_1, root_2);
                }
                // TL.g:55:41: ^( RETURN ( expression )? )
                {
                Object root_2 = (Object)adaptor.nil();
                root_2 = (Object)adaptor.becomeRoot((Object)adaptor.create(RETURN, "RETURN"), root_2);

                // TL.g:55:50: ( expression )?
                if ( stream_expression.hasNext() ) {
                    adaptor.addChild(root_2, stream_expression.nextTree());

                }
                stream_expression.reset();

                adaptor.addChild(root_1, root_2);
                }

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "block"

    public static class delimitedBlock_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "delimitedBlock"
    // TL.g:58:1: delimitedBlock : ( statement | functionDecl )* ( Return expression ';' )? -> ^( BLOCK ^( STATEMENTS ( statement )* ) ^( RETURN ( expression )? ) ) ;
    public final TLParser.delimitedBlock_return delimitedBlock() throws RecognitionException {
        TLParser.delimitedBlock_return retval = new TLParser.delimitedBlock_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token Return12=null;
        Token char_literal14=null;
        TLParser.statement_return statement10 = null;

        TLParser.functionDecl_return functionDecl11 = null;

        TLParser.expression_return expression13 = null;


        Object Return12_tree=null;
        Object char_literal14_tree=null;
        RewriteRuleTokenStream stream_Return=new RewriteRuleTokenStream(adaptor,"token Return");
        RewriteRuleTokenStream stream_64=new RewriteRuleTokenStream(adaptor,"token 64");
        RewriteRuleSubtreeStream stream_statement=new RewriteRuleSubtreeStream(adaptor,"rule statement");
        RewriteRuleSubtreeStream stream_expression=new RewriteRuleSubtreeStream(adaptor,"rule expression");
        RewriteRuleSubtreeStream stream_functionDecl=new RewriteRuleSubtreeStream(adaptor,"rule functionDecl");
        try {
            // TL.g:59:3: ( ( statement | functionDecl )* ( Return expression ';' )? -> ^( BLOCK ^( STATEMENTS ( statement )* ) ^( RETURN ( expression )? ) ) )
            // TL.g:59:5: ( statement | functionDecl )* ( Return expression ';' )?
            {
            // TL.g:59:5: ( statement | functionDecl )*
            loop3:
            do {
                int alt3=3;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==If||(LA3_0>=Identifier && LA3_0<=Out)) ) {
                    alt3=1;
                }
                else if ( (LA3_0==Def_Func) ) {
                    alt3=2;
                }


                switch (alt3) {
            	case 1 :
            	    // TL.g:59:6: statement
            	    {
            	    pushFollow(FOLLOW_statement_in_delimitedBlock209);
            	    statement10=statement();

            	    state._fsp--;

            	    stream_statement.add(statement10.getTree());

            	    }
            	    break;
            	case 2 :
            	    // TL.g:59:18: functionDecl
            	    {
            	    pushFollow(FOLLOW_functionDecl_in_delimitedBlock213);
            	    functionDecl11=functionDecl();

            	    state._fsp--;

            	    stream_functionDecl.add(functionDecl11.getTree());

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);

            // TL.g:59:33: ( Return expression ';' )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==Return) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // TL.g:59:34: Return expression ';'
                    {
                    Return12=(Token)match(input,Return,FOLLOW_Return_in_delimitedBlock218);  
                    stream_Return.add(Return12);

                    pushFollow(FOLLOW_expression_in_delimitedBlock220);
                    expression13=expression();

                    state._fsp--;

                    stream_expression.add(expression13.getTree());
                    char_literal14=(Token)match(input,64,FOLLOW_64_in_delimitedBlock222);  
                    stream_64.add(char_literal14);


                    }
                    break;

            }



            // AST REWRITE
            // elements: statement, expression
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 60:5: -> ^( BLOCK ^( STATEMENTS ( statement )* ) ^( RETURN ( expression )? ) )
            {
                // TL.g:60:8: ^( BLOCK ^( STATEMENTS ( statement )* ) ^( RETURN ( expression )? ) )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(BLOCK, "BLOCK"), root_1);

                // TL.g:60:16: ^( STATEMENTS ( statement )* )
                {
                Object root_2 = (Object)adaptor.nil();
                root_2 = (Object)adaptor.becomeRoot((Object)adaptor.create(STATEMENTS, "STATEMENTS"), root_2);

                // TL.g:60:29: ( statement )*
                while ( stream_statement.hasNext() ) {
                    adaptor.addChild(root_2, stream_statement.nextTree());

                }
                stream_statement.reset();

                adaptor.addChild(root_1, root_2);
                }
                // TL.g:60:41: ^( RETURN ( expression )? )
                {
                Object root_2 = (Object)adaptor.nil();
                root_2 = (Object)adaptor.becomeRoot((Object)adaptor.create(RETURN, "RETURN"), root_2);

                // TL.g:60:50: ( expression )?
                if ( stream_expression.hasNext() ) {
                    adaptor.addChild(root_2, stream_expression.nextTree());

                }
                stream_expression.reset();

                adaptor.addChild(root_1, root_2);
                }

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "delimitedBlock"

    public static class statement_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "statement"
    // TL.g:63:1: statement : ( assignment ';' -> assignment | functionCall ';' -> functionCall | ifStatement );
    public final TLParser.statement_return statement() throws RecognitionException {
        TLParser.statement_return retval = new TLParser.statement_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal16=null;
        Token char_literal18=null;
        TLParser.assignment_return assignment15 = null;

        TLParser.functionCall_return functionCall17 = null;

        TLParser.ifStatement_return ifStatement19 = null;


        Object char_literal16_tree=null;
        Object char_literal18_tree=null;
        RewriteRuleTokenStream stream_64=new RewriteRuleTokenStream(adaptor,"token 64");
        RewriteRuleSubtreeStream stream_functionCall=new RewriteRuleSubtreeStream(adaptor,"rule functionCall");
        RewriteRuleSubtreeStream stream_assignment=new RewriteRuleSubtreeStream(adaptor,"rule assignment");
        try {
            // TL.g:64:3: ( assignment ';' -> assignment | functionCall ';' -> functionCall | ifStatement )
            int alt5=3;
            switch ( input.LA(1) ) {
            case Identifier:
                {
                int LA5_1 = input.LA(2);

                if ( (LA5_1==Open_Paren) ) {
                    alt5=2;
                }
                else if ( (LA5_1==Gets||LA5_1==Open_Bracket) ) {
                    alt5=1;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 5, 1, input);

                    throw nvae;
                }
                }
                break;
            case Out:
                {
                alt5=1;
                }
                break;
            case If:
                {
                alt5=3;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;
            }

            switch (alt5) {
                case 1 :
                    // TL.g:64:6: assignment ';'
                    {
                    pushFollow(FOLLOW_assignment_in_statement262);
                    assignment15=assignment();

                    state._fsp--;

                    stream_assignment.add(assignment15.getTree());
                    char_literal16=(Token)match(input,64,FOLLOW_64_in_statement264);  
                    stream_64.add(char_literal16);



                    // AST REWRITE
                    // elements: assignment
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 64:21: -> assignment
                    {
                        adaptor.addChild(root_0, stream_assignment.nextTree());

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 2 :
                    // TL.g:65:6: functionCall ';'
                    {
                    pushFollow(FOLLOW_functionCall_in_statement275);
                    functionCall17=functionCall();

                    state._fsp--;

                    stream_functionCall.add(functionCall17.getTree());
                    char_literal18=(Token)match(input,64,FOLLOW_64_in_statement277);  
                    stream_64.add(char_literal18);



                    // AST REWRITE
                    // elements: functionCall
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 65:23: -> functionCall
                    {
                        adaptor.addChild(root_0, stream_functionCall.nextTree());

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 3 :
                    // TL.g:66:6: ifStatement
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_ifStatement_in_statement288);
                    ifStatement19=ifStatement();

                    state._fsp--;

                    adaptor.addChild(root_0, ifStatement19.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "statement"

    public static class ifStatement_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "ifStatement"
    // TL.g:69:1: ifStatement : ifStat ( elseIfStat )* ( elseStat )? -> ^( IF ifStat ( elseIfStat )* ( elseStat )? ) ;
    public final TLParser.ifStatement_return ifStatement() throws RecognitionException {
        TLParser.ifStatement_return retval = new TLParser.ifStatement_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        TLParser.ifStat_return ifStat20 = null;

        TLParser.elseIfStat_return elseIfStat21 = null;

        TLParser.elseStat_return elseStat22 = null;


        RewriteRuleSubtreeStream stream_elseIfStat=new RewriteRuleSubtreeStream(adaptor,"rule elseIfStat");
        RewriteRuleSubtreeStream stream_ifStat=new RewriteRuleSubtreeStream(adaptor,"rule ifStat");
        RewriteRuleSubtreeStream stream_elseStat=new RewriteRuleSubtreeStream(adaptor,"rule elseStat");
        try {
            // TL.g:70:3: ( ifStat ( elseIfStat )* ( elseStat )? -> ^( IF ifStat ( elseIfStat )* ( elseStat )? ) )
            // TL.g:70:6: ifStat ( elseIfStat )* ( elseStat )?
            {
            pushFollow(FOLLOW_ifStat_in_ifStatement302);
            ifStat20=ifStat();

            state._fsp--;

            stream_ifStat.add(ifStat20.getTree());
            // TL.g:70:13: ( elseIfStat )*
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( (LA6_0==Else) ) {
                    int LA6_1 = input.LA(2);

                    if ( (LA6_1==If) ) {
                        alt6=1;
                    }


                }
                else if ( (LA6_0==Else_If) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // TL.g:70:13: elseIfStat
            	    {
            	    pushFollow(FOLLOW_elseIfStat_in_ifStatement304);
            	    elseIfStat21=elseIfStat();

            	    state._fsp--;

            	    stream_elseIfStat.add(elseIfStat21.getTree());

            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);

            // TL.g:70:25: ( elseStat )?
            int alt7=2;
            int LA7_0 = input.LA(1);

            if ( (LA7_0==Else) ) {
                alt7=1;
            }
            switch (alt7) {
                case 1 :
                    // TL.g:70:25: elseStat
                    {
                    pushFollow(FOLLOW_elseStat_in_ifStatement307);
                    elseStat22=elseStat();

                    state._fsp--;

                    stream_elseStat.add(elseStat22.getTree());

                    }
                    break;

            }



            // AST REWRITE
            // elements: elseIfStat, elseStat, ifStat
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 70:35: -> ^( IF ifStat ( elseIfStat )* ( elseStat )? )
            {
                // TL.g:70:38: ^( IF ifStat ( elseIfStat )* ( elseStat )? )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(IF, "IF"), root_1);

                adaptor.addChild(root_1, stream_ifStat.nextTree());
                // TL.g:70:50: ( elseIfStat )*
                while ( stream_elseIfStat.hasNext() ) {
                    adaptor.addChild(root_1, stream_elseIfStat.nextTree());

                }
                stream_elseIfStat.reset();
                // TL.g:70:62: ( elseStat )?
                if ( stream_elseStat.hasNext() ) {
                    adaptor.addChild(root_1, stream_elseStat.nextTree());

                }
                stream_elseStat.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "ifStatement"

    public static class ifStat_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "ifStat"
    // TL.g:73:1: ifStat : If expression block -> ^( EXP expression block ) ;
    public final TLParser.ifStat_return ifStat() throws RecognitionException {
        TLParser.ifStat_return retval = new TLParser.ifStat_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token If23=null;
        TLParser.expression_return expression24 = null;

        TLParser.block_return block25 = null;


        Object If23_tree=null;
        RewriteRuleTokenStream stream_If=new RewriteRuleTokenStream(adaptor,"token If");
        RewriteRuleSubtreeStream stream_expression=new RewriteRuleSubtreeStream(adaptor,"rule expression");
        RewriteRuleSubtreeStream stream_block=new RewriteRuleSubtreeStream(adaptor,"rule block");
        try {
            // TL.g:74:3: ( If expression block -> ^( EXP expression block ) )
            // TL.g:74:6: If expression block
            {
            If23=(Token)match(input,If,FOLLOW_If_in_ifStat336);  
            stream_If.add(If23);

            pushFollow(FOLLOW_expression_in_ifStat338);
            expression24=expression();

            state._fsp--;

            stream_expression.add(expression24.getTree());
            pushFollow(FOLLOW_block_in_ifStat340);
            block25=block();

            state._fsp--;

            stream_block.add(block25.getTree());


            // AST REWRITE
            // elements: expression, block
            // token labels: 
            // rule labels: retval
            // token list labels: 
